# TuringsMachineGenerator

./: .gitignore  CMakeLists.txt  Generator  Generator.cpp  Machine.cpp  Machine.h  README.md  ScanTable.cpp  ScanTable.h  TuringsMachineGenerator.pro  Turring-Machine.sublime-workspace  editmachines.cpp  edittapes.cpp  edittapes.h  edittapes.ui  machine.cpp  machine.h  machinesimulation.cpp  machinesimulation.h  main.cpp  qrc_resource.cpp  randommachines.cpp  randommachines.ui  randomtapes.cpp  randomtapes.h  randomtapes.ui  resource.qrc  settings.cpp  settings.h  settings.ui  table.txt  tape.cpp  tape.h  toDo  ui_edittapes.h  ui_machinesimulation.h  ui_randommachines.h  ui_randomtapes.h  ui_settings.h  ui_usermachines.h  (+3 more)
C++/: Turring-Machine.sublime-project  Turring-Machine.sublime-workspace
C++/tables/: .table.conf  3 State Busy Beaver.txt  3state2symbolbusybeaver.txt  4 State Busy Beaver.txt  4state2symbolbusybeaver.txt  5 State Busy Beaver.txt  5state2symbolbusybeaver.txt  Bin2Dec Converter.txt  Binary Addition.txt  Turring's Sequence.txt  abc.txt  longRandomTable.txt  personalized.txt  turringSequence.txt
C++/tapes/: tape1.txt  tape2.txt
Qt/TuringsMachineSimulator/: TuringsMachineSimulator.pro  TuringsMachineSimulator.pro.user.253ab2e  editmachines.cpp  editmachines.h  editmachines.ui  edittapes.cpp  edittapes.h  edittapes.ui  machine.cpp  machine.h  machineinfo.cpp  machineinfo.h  machinesimulation.cpp  machinesimulation.h  (+20 more)
tables/: .table.conf  3state2symbolbusybeaver.txt  4state2symbolbusybeaver.txt  5state2symbolbusybeaver.txt  personalized.txt  test.txt
(+35 files in other folders)
